fixed cut off

--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 100vh;
+  // height: 100vh;
   font-family: 'Karla', sans-serif;
   font-size: 16px;
   font-weight: 400;
